IA, commande player et changements algo capture